# scale-vehicle-control-stack

./: .gitignore  LICENSE  README.md
ArduinoInterface/: ArduinoInterface.ino  PWMController.h  README.md  SerialHandler.h
RunStop/: README.md
RunStop/RunStopRelay/: Constants.h  RunStopRelay.ino  Switch.h
RunStop/RunStopRemote/: Constants.h  LED.h  RunStopRemote.ino  Switch.h
ros_workspace/: README.md
ros_workspace/src/01_perception/perception_meta/: CMakeLists.txt  package.xml
ros_workspace/src/01_perception/perception_meta/launch/: camera_perception.launch
ros_workspace/src/01_perception/point_cloud_thresholder/: CMakeLists.txt  package.xml
ros_workspace/src/01_perception/point_cloud_thresholder/include/point_cloud_thresholder/: clusterer.h  cone_detector.h  thresholder.h
ros_workspace/src/01_perception/point_cloud_thresholder/launch/: point_cloud_thresholder.launch
ros_workspace/src/01_perception/point_cloud_thresholder/src/: .clusterer.cpp.swp  clusterer.cpp  cone_detector.cpp  main.cpp  thresholder.cpp
ros_workspace/src/03_control/centerline_follower/: CMakeLists.txt  package.xml  setup.py
ros_workspace/src/03_control/centerline_follower/launch/: centerline_follower.launch
ros_workspace/src/03_control/centerline_follower/nodes/: centerline_follower
ros_workspace/src/03_control/keyboard_control/launch/: keyboard_control.launch
ros_workspace/src/03_control/keyboard_control/src/: main.cpp
ros_workspace/src/03_control/py_centerline_follower/: CMakeLists.txt  package.xml  setup.py
ros_workspace/src/03_control/py_centerline_follower/launch/: centerline_follower.launch
ros_workspace/src/03_control/py_centerline_follower/nodes/: cubic_spline  py_centerline_follower
ros_workspace/src/common/common_msgs/: CMakeLists.txt
ros_workspace/src/common/common_msgs/msg/: Control.msg
ros_workspace/src/common/common_utilities/include/common_utilities/: Color.h
ros_workspace/src/drivers/arduino_interface/: CMakeLists.txt
ros_workspace/src/drivers/arduino_interface/include/arduino_interface/: serial_handler.h
ros_workspace/src/drivers/arduino_interface/launch/: arduino_interface.launch
ros_workspace/src/drivers/arduino_interface/src/: main.cpp  pwm_tester.cpp  serial_handler.cpp  time_tester.cpp
ros_workspace/src/drivers/bag_recorder/launch/: bag_recorder.launch
