<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>perception_meta</name>
  <version>0.0.0</version>
  <description>
    perception_meta package
  </description>

  <license>TODO</license>
  <author>TODO</author>
  <maintainer email="TODO@TODO.TODO">TODO</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
</package>
