<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>point_cloud_thresholder</name>
  <version>0.0.0</version>
  <description>
    point_cloud_thresholder package
  </description>

  <license>TODO</license>
  <author>TODO</author>
  <maintainer email="TODO@TODO.com">TODO</maintainer>

  <depend>perception_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>common_utilities</depend>
  <depend>rviz_visual_tools</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
